Fix right hand spacing of thumbnails

--- a/src/app/file-browser/components/file-list-controls/file-list-controls.component.scss
+++ b/src/app/file-browser/components/file-list-controls/file-list-controls.component.scss
@@ -108,7 +108,7 @@
 
   .name {
     @include file-list-col-name;
-    margin-left: $file-list-thumb-col-width;
+    margin-left: $file-list-thumb-col-width + $grid-unit;
   }
 
   .type {
